Corrected the alignment of the boxes shown on the landing page of super admin module.

--- a/src/app/superadmin/home/home.component.css
+++ b/src/app/superadmin/home/home.component.css
@@ -14,8 +14,6 @@
     padding: 1.2rem 1.3rem;
     display: block;
     text-decoration: none;
-    flex: 1 1 0;
-    /* margin-bottom: 3rem; */
 }
 
 .home-card-1 {
@@ -61,12 +59,12 @@
 }
 
 .home-card-boxes {
-    max-width: 65%;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2rem;
     display: flex;
     flex-wrap: wrap;
     gap: 3rem;
-    justify-content: space-around;
+    justify-content: start;
 }
